add multiple bindings test

--- a/spec/index.html
+++ b/spec/index.html
@@ -18,6 +18,7 @@
   <script type="text/javascript" src="rivets/binders.js"></script>
   <script type="text/javascript" src="rivets/routines.js"></script>
   <script type="text/javascript" src="rivets/functional.js"></script>
+  <script type="text/javascript" src="rivets/multiple-bindings.js"></script>
 
   <script type="text/javascript">
     (function() {
